
v2.9.0 
	=> Added a slightly more intuitive password recovery UI

v2.10.0
	=> Altered the "config/config.js" file to use ".conf" files for passwords rather than inline text
	=> Altered the "schema/sample.sql" file to fit an email in organizations as well as a more intuitive easier to debug format

v2.11.0
	=> Updated the passport JWT strategy and SQL to start support for SAAS 
	=> Fixed the deactivated user authentication issue
	
v2.12.0 
	=> Updated the "auth"/register route via the postgres database implementation to accommodate a more flexible datase for insertion of main applixation members

v2.13.0
	=> Updated the "process" pgdb file
	=> Updated the "db"/index.js file to return json rather than plain text
	=> Slight updates made to the main HTML file navigation menu

v.2.14.0 
	=> added the "keepMatch" and "removeMatch" methods that perform regex checks on csv's and Arrays alike returning an Array

v.2.15.0
	=> Fixed the "pgdb" not found exclusion error

v.2.16.0
	=> Merged the SMS frame project into the main application (logically and in the database schema as well) **need_to_rename_tables
	=> Fixed major database security flaws
	=> Allowed easy and atomic (regEx based) database security access definitions
	=> Integrated the encrypt,decrypt module
	=> Added the framify.js customizer via the "src" folder
		... build your project specific version by running "gulp"
		
v.2.16.1 
	=> Fixed the missing command parameters for the route "/auth/verify"
	
v.2.17.1
	=> Added the db/backup ignore directive in the .gitignore file

v.2.17.2
	=> Fixed missing dependency for gulp packaging the src files
	
v.2.17.3
	=> Fixed the erroneous SMS balance deduction upon the provision of falsy SMS credentials 
	
v.2.17.4
	=> Fixed the  missing organization record for the members trigger function
	
v.2.17.5
	=> Re-did the login and signup forms to merge more fluently the UI-KIT design language