@@ -144,3 +144,4 @@ v.2.17.4
 	
 v.2.17.5
 	=> Re-did the login and signup forms to merge more fluently the UI-KIT design language
+	=> Fixed a critical error that limited SMS credit loading to default organizationn rather than the User's Organization
